--- a/views/driver-signup.ejs
+++ b/views/driver-signup.ejs
@@ -1,10 +1,20 @@
 
 <%- include("partials/header"); -%>
+<%- include("partials/flash"); -%>  
     <h1>SignUp</h1>
-    <form action="/" method="post">
+    <!-- <form action="/" method="post">
         <input type="text" name="newDriverName" placeholder="Enter Name" required ><br>
         <input type="email" name="newDriverEmail"placeholder="Enter Email" required><br>
         <input type="text" name="newDriverPhoneNo" placeholder="Enter Phone Number" required><br>
+        <input type="submit" value="submit">
+    </form> -->
+    
+    <form action="/register" method="post">
+        <input type="text" name="username" placeholder="username" required ><br>
+        <input type="email" name="email"placeholder="Enter Email" required><br>
+        <input type="text" name="phone" placeholder="Enter Phone Number" required><br>
+        <label for="password">Password</label>
+        <input id="password" type="password" name="password" required><br>
         <input type="submit" value="submit">
     </form>
 
