--- a/views/driver-login.ejs
+++ b/views/driver-login.ejs
@@ -1,7 +1,7 @@
 
 <%- include("partials/header"); -%>
 <%- include("partials/flash"); -%>  
-    <h1>Login</h1>    
+        
     <form action="/login" method="post">
         <label for="username">Username</label>
         <input type="text" name="username" placeholder="username" required ><br>
@@ -13,3 +13,5 @@
     </form>
 
 <%- include("partials/footer"); -%>
+
+    </form>
