--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -5,15 +5,12 @@
   <meta charset="utf-8">
   <title>ExpressJS Starter Project</title>
   <meta charset="utf-8">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://unpkg.com/open-props"/>
   <link rel="stylesheet" href="/styles/style.css">
-  <nav class="navbar navbar-default">
-    <div class="container">
-      <div class="navbar-header">
-        <p class="navbar-brand">ExpressJS Starter Project</p>
-      </div>
-    </div>
-  </nav>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:ital@1&display=swap" rel="stylesheet">
+</head>
 
-  <body>
+<body>
     <div class="container">
