--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -1,36 +1,72 @@
-.container-fluid {
-    padding-top: 70px;
-    padding-bottom: 70px;
-}
-.navbar {
-    padding-top: 15px;
-    padding-bottom: 15px;
-    border: 0;
-    border-radius: 0;
-    margin-bottom: 0;
-    font-size: 12px;
-    letter-spacing: 5px;
-}
-.navbar-nav  li a:hover {
-    color: #1abc9c !important;
+body {
+    font-family: Arial, sans-serif;
+    background-color: #222831;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+    
 }
 
-.footer-padding {
-	padding-bottom: 60px;
+.container {
+    background-color: #393E46;
+    padding: 20px;
+    border-radius: 8px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    width: 300px;
 }
 
-.footer {
-	position: absolute;
-	text-align: center;
-	bottom: 0;
-	width: 100%;
-	height: 60px;
-	background-color: #1abc9c;
+.container h2 {
+    text-align: center;
+    color: #333;
 }
 
-.footer p {
-	margin-top: 25px;
-	font-size: 12px;
-  color: #fff;
+.login-form {
+    display: flex;
+    flex-direction: column;
 }
 
+.form-group {
+    margin-bottom: 15px;
+
+}
+
+.form-group label {
+    margin-bottom: 5px;
+    color: #555;
+}
+
+.form-group input {
+    padding: 8px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    width: 100%;
+}
+
+.form-group a {
+    padding: 10px;
+    background-color: #00ADB5;
+    color: #fff;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    display: flex;
+    margin-bottom: 10px;
+    text-decoration: none; 
+    
+}
+
+.form-group img{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
+.form-group a:hover {
+    background-color: #00ADB5;
+}
